Header Section Complete

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         </svg>
                     </label> 
                     <ul tabindex="0"
-                        class="menu menu-sm dropdown-content pt-3 z-[1] p-3 shadow bg-base-200 rounded-full">
+                        class="menu menu-sm dropdown-content pt-3 z-[1] p-3 shadow bg-base-200 rounded-lg">
                         <li><a>Home</a></li>
                         <li><a>About</a></li>
                         <li><a>Shop</a></li>
@@ -77,12 +77,109 @@
                 <img src="./images/logo.png" alt="" class="w-10">
                 <a class="btn btn-ghost normal-case text-3xl sm:text-[#121212] md:text-common-text-color lg:text-common-text-color">Fruit Burst</a>
             </div>
-            <div class="navbar-end relative pr-14 hidden lg:flex">
+            <div class="navbar-end lg:flex relative pr-14 hidden ">
                 <input type="text" placeholder="Type here" class="rounded-full h-10 input input-bordered input-sm max-w-xs w-full" />
                 <i class="fa-solid fa-magnifying-glass absolute right-16"></i>
             </div>
 
         </div>
+
+
+
+        <!-- banner -->
+        <div class="relative">
+            <div class="carousel w-full">
+                <div id="slide1" class="carousel-item relative w-full ">
+                    <div class="hero min-h-[550px]" style="background-image: url(./images/banner1.png);">
+                        <div class="hero-overlay bg-opacity-30"></div>
+                        <div class="hero-content text-center text-neutral-content">
+                          <div class="max-w-md"> 
+                            <h1 class="mb-5 text-3xl md:text-5xl font-bold text-common-text-color">Exotic tastes at your doorstep</h1>
+                            <p class="mb-5 text-basic-color">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                            <button class="btn bg-common-color sm:mb-2 md:mb-10 lg:mb-32 text-black font-extrabold">Get Started</button>
+                          </div>
+                        </div>
+                      </div>
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide4" class="btn btn-circle bg-black outline-none border-none text-common-text-color">❮</a>
+                        <a href="#slide2" class="btn btn-circle bg-black outline-none border-none text-common-text-color">❯</a>
+                    </div>
+                </div>
+                <div id="slide2" class="carousel-item relative w-full ">
+                    <div class="hero min-h-[550px]" style="background-image: url(./images/banner2.png);">
+                        <div class="hero-overlay bg-opacity-30"></div>
+                        <div class="hero-content text-center text-neutral-content">
+                          <div class="max-w-md">
+                            <h1 class="mb-5 text-3xl md:text-5xl font-bold text-common-text-color">Exotic tastes at your doorstep</h1>
+                            <p class="mb-5 text-basic-color">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                            <button class="btn bg-common-color sm:mb-2 md:mb-10 lg:mb-32 text-black font-extrabold">Get Started</button>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide1" class="btn btn-circle bg-black outline-none border-none text-common-text-color">❮</a>
+                        <a href="#slide3" class="btn btn-circle bg-black outline-none border-none text-common-text-color">❯</a>
+                    </div>
+                </div>
+                <div id="slide3" class="carousel-item relative w-full ">
+                    <div class="hero min-h-[550px]" style="background-image: url(./images/banner3.png);">
+                        <div class="hero-overlay bg-opacity-30"></div>
+                        <div class="hero-content text-center text-neutral-content">
+                          <div class="max-w-md">
+                            <h1 class="mb-5 text-3xl md:text-5xl font-bold text-common-text-color">Exotic tastes at your doorstep</h1>
+                            <p class="mb-5 text-basic-color">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                            <button class="btn bg-common-color sm:mb-2 md:mb-10 lg:mb-32 text-black font-extrabold">Get Started</button>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide2" class="btn btn-circle bg-black outline-none border-none text-common-text-color">❮</a>
+                        <a href="#slide4" class="btn btn-circle bg-black outline-none border-none text-common-text-color">❯</a>
+                    </div>
+                </div>
+                <div id="slide4" class="carousel-item relative w-full ">
+                    <div class="hero min-h-[550px]" style="background-image: url(./images/banner4.png);">
+                        <div class="hero-overlay bg-opacity-30"></div>
+                        <div class="hero-content text-center text-neutral-content">
+                          <div class="max-w-md">
+                            <h1 class="mb-5 text-3xl md:text-5xl font-bold text-common-text-color">Exotic tastes at your doorstep</h1>
+                            <p class="mb-5 text-basic-color">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                            <button class="btn bg-common-color sm:mb-2 md:mb-10 lg:mb-32 text-black font-extrabold">Get Started</button>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide3" class="btn btn-circle bg-black outline-none border-none text-common-text-color">❮</a>
+                        <a href="#slide1" class="btn btn-circle bg-black outline-none border-none text-common-text-color">❯</a>
+                    </div>
+                </div>
+            </div>
+            <div class="absolute max-w-5xl left-[100px] top-[430px] hidden md:hidden lg:block">
+                <div class=" mx-auto flex gap-12 justify-center items-center p-10 bg-white rounded-lg">
+                    <div class="text-center space-y-2">
+                        <img src="./images/fruit1.png" alt="">
+                        <p>Grape</p>
+                    </div>
+                    <div class="text-center space-y-2">
+                        <img src="./images/fruit2.png" alt="">
+                        <p>Orange</p>
+                    </div>
+                    <div class="text-center space-y-2">
+                        <img src="./images/fruit3.png" alt="">
+                        <p>Mango</p>
+                    </div>
+                    <div class="text-center space-y-2">
+                        <img src="./images/fruit4.png" alt="">
+                        <p>Strawberry</p>
+                    </div>
+                    <div class="text-center space-y-2">
+                        <img src="./images/fruit5.png" alt="">
+                        <p>Pomegranate</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         
     </header>
 
