Trying to responsive choose quality sections

--- a/index.html
+++ b/index.html
@@ -598,15 +598,18 @@
                                     fill="#121212" />
                             </svg>
                         </div>
+                        
+                    </div>
+                    <div class="flex flex-col lg:flex-row sm:justify-center items-center gap-10 ">
+
                         <div class="flex-1 text-center lg:text-left">
                             <h2 class="text-2xl font-extrabold">Dedicated Team</h2>
-                            <hr class="border border-[#121212cc] w-20 my-3 ml-[100px] md:ml-[200px] lg:ml-0">
+                            <hr class="border border-[#121212cc] w-20 my-3 m-auto md:m-auto md:mt-2 md:mb-2 lg:ml-0">
                             <p class="text-[#12121299]">Professional employees are there for you to pick the most
                                 amazing
                                 and fresh fruits.</p>
                         </div>
-                    </div>
-                    <div class="flex flex-col lg:flex-row items-center gap-10 ">
+
                         <div class="w-16 h-12 bg-slate-300 flex items-center justify-center rounded-full">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="none">
@@ -618,7 +621,7 @@
                         </div>
                         <div class="flex-1 text-center lg:text-left">
                             <h2 class="text-2xl font-extrabold">Fresh is Best</h2>
-                            <hr class="border border-[#121212cc] w-20 my-3 ml-[100px] md:ml-[200px] lg:ml-0">
+                            <hr class="border border-[#121212cc] w-20 my-3 m-auto md:m-auto md:mt-2 md:mb-2 lg:ml-0">
                             <p class="text-[#12121299]">Professional employees are there for you to pick the most
                                 amazing
                                 and fresh fruits.</p>
@@ -676,7 +679,7 @@
                         </div>
                         <div class="flex-1 lg:text-left text-center ">
                             <h2 class="text-2xl font-extrabold">Gift Certificates</h2>
-                            <hr class="border border-[#121212cc] w-20 my-3 ml-[100px] md:ml-[200px] lg:ml-0">
+                            <hr class="border border-[#121212cc] w-20 my-3 m-auto md:m-auto md:mt-2 md:mb-2 lg:ml-0">
                             <p class="text-[#12121299]">Professional employees are there for you to pick the most
                                 amazing
                                 and fresh fruits.</p>
@@ -690,7 +693,7 @@
                     <div class="flex items-center gap-10 flex-col-reverse lg:flex-row">
                         <div class="text-center lg:text-right flex-1">
                             <h2 class="text-2xl font-extrabold">Integrated Supplier</h2>
-                            <hr class="border border-gray-400 w-20 my-3 ml-[150px] md:ml-[250px] lg:ml-[210px]">
+                            <hr class="border border-gray-400 w-20 my-3 m-auto md:m-auto md:mt-2 md:mb-2 lg:ml-[210px]">
                             <p class="text-[#12121299]">Professional employees are there for you to pick the most
                                 amazing and fresh fruits.</p>
                         </div>
@@ -741,8 +744,8 @@
                     <div class="flex items-center gap-10 flex-col-reverse lg:flex-row">
                         <div class="text-center lg:text-right flex-1">
                             <h2 class="text-2xl font-extrabold">Sustainable Practice</h2>
-                            <hr class="border border-[#121212cc] w-20 my-3 ml-[100px] md:ml-[200px] lg:ml-[210px]">
-                            <p class="text-[#12121299]">Professional employees are there for you to pick the most
+                            <hr class="border border-gray-400 w-20 my-3 m-auto md:m-auto md:mt-2 md:mb-2 lg:ml-[210px]">
+                            <p class="text-[#12121299] md:max-w-1/2">Professional employees are there for you to pick the most
                                 amazing and fresh fruits.</p>
                         </div>
                         <div class="w-16 h-12 bg-slate-300 flex items-center justify-center rounded-full">
@@ -761,7 +764,7 @@
                     <div class="flex items-center gap-10 flex-col-reverse lg:flex-row">
                         <div class="text-center lg:text-right flex-1">
                             <h2 class="text-2xl font-extrabold">The Benefits Only</h2>
-                            <hr class="border border-[#121212cc] w-20 my-3 ml-[100px] md:ml-[200px] lg:ml-[210px]">
+                            <hr class="border border-gray-400 w-20 my-3 m-auto md:m-auto md:mt-2 md:mb-2 lg:ml-[210px]">
                             <p class="text-[#12121299]">Professional employees are there for you to pick the most
                                 amazing and fresh fruits.</p>
                         </div>
