--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
                     </div>
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide4"
-                            class="btn btn-circle bg-black outline-none border-none text-common-text-color">❮</a>
+                            class="btn btn-circle hover:bg-black hover:text-yellow-300 bg-black outline-none border-none text-common-text-color">❮</a>
                         <a href="#slide2"
-                            class="btn btn-circle bg-black outline-none border-none text-common-text-color">❯</a>
+                            class="btn btn-circle hover:bg-black hover:text-yellow-300 bg-black outline-none border-none text-common-text-color">❯</a>
                     </div>
                 </div>
                 <div id="slide2" class="carousel-item relative w-full ">
@@ -134,9 +134,9 @@
                     </div>
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide1"
-                            class="btn btn-circle bg-black outline-none border-none text-common-text-color">❮</a>
+                            class="btn btn-circle hover:bg-black hover:text-yellow-300 bg-black outline-none border-none text-common-text-color">❮</a>
                         <a href="#slide3"
-                            class="btn btn-circle bg-black outline-none border-none text-common-text-color">❯</a>
+                            class="btn btn-circle hover:bg-black hover:text-yellow-300 bg-black outline-none border-none text-common-text-color">❯</a>
                     </div>
                 </div>
                 <div id="slide3" class="carousel-item relative w-full ">
@@ -157,9 +157,9 @@
                     </div>
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide2"
-                            class="btn btn-circle bg-black outline-none border-none text-common-text-color">❮</a>
+                            class="btn btn-circle hover:bg-black hover:text-yellow-300 bg-black outline-none border-none text-common-text-color">❮</a>
                         <a href="#slide4"
-                            class="btn btn-circle bg-black outline-none border-none text-common-text-color">❯</a>
+                            class="btn btn-circle hover:bg-black hover:text-yellow-300 bg-black outline-none border-none text-common-text-color">❯</a>
                     </div>
                 </div>
                 <div id="slide4" class="carousel-item relative w-full ">
@@ -180,9 +180,9 @@
                     </div>
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide3"
-                            class="btn btn-circle bg-black outline-none border-none text-common-text-color">❮</a>
+                            class="btn btn-circle  hover:bg-black hover:text-yellow-300 bg-black outline-none border-none text-common-text-color">❮</a>
                         <a href="#slide1"
-                            class="btn btn-circle bg-black outline-none border-none text-common-text-color">❯</a>
+                            class="btn btn-circle hover:bg-black hover:text-yellow-300 bg-black outline-none border-none text-common-text-color">❯</a>
                     </div>
                 </div>
             </div>
